# ges-smpte-exp

./: .gitignore  README.md  azure-pipelines.yml  box.sh  dune-project  ffmpeg.fail.txt  ffmpeg.ok.txt  package.json  run.sh
.ci/: build-platform.yml  cross-release.yml  pipelines-release.js  release-platform-setup.yml
assets/: dune
c-code/: core.c  core.h  dune  foo.c
config/: discover.ml
configurator/: dune
esy.lock/: index.json
ges-binding-types/: dune  ges_c_binding_types.ml
ges-bindings/: dune  ges_c_bindings.ml
ges-c/: Ges_c.ml  dune
lib/: Nug.re  Nuggets.re  dune  stubs.c
stubgen/: dune  stubgen.ml  types_stubgen.ml
test/: TestNuggets.re  dune
test/lib/: Lib.re  dune  test_media_file_stubs.c
