(executable
 (name stubgen)
 (modules stubgen)
 (public_name stubgen.exe)
 (libraries nuggets.ges-c.bindings ctypes ctypes.foreign))

(executable
 (name types_stubgen)
 (modules types_stubgen)
 (libraries nuggets.ges-c.binding-types ctypes.stubs ctypes))

(rule
 (targets ml_types_stubgen.c)
 (deps ./types_stubgen.exe)
 (action (with-stdout-to %{targets} (run %{deps}))))


(rule
 (targets ml_types_stubgen.exe)
 (deps    (:c ./ml_types_stubgen.c) ../c-code/libges_c_c_stubs.a)
 (action (bash "\
%{cc} %{c} -I../c-code/ \
  -I `dirname %{lib:ctypes:ctypes_cstubs_internals.h}` \
  -I %{ocaml_where} -o %{targets}")))
